# loderunner

./: Cargo.toml  README.md
assets/: tiles.png-autosave.kra
assets/anims/: brick.anim  fire.anim  guard.anim  runner.anim
assets/levels/classic/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level
assets/levels/debug/: debug.level  debug_02.level
assets/playlists/: classic.playlist  debug.playlist
src/: main.rs
src/assets/: AssetLoading.rs  LevelAsset.rs  animations.rs  mod.rs  playlist_asset.rs
src/camera/: mod.rs
src/game/: ai.rs  animations.rs  bundles.rs  components.rs  gameplay.rs  mod.rs  movement.rs  resources.rs
src_art/: navdebug.pdn  progress_bar.kra
