[package]
name = "loderunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
iyes_progress = {version = "0.5.0", features = ["assets"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
anyhow = "1.0.53"
rand = "0.8.4"
